Ran the new FindBugs plugin against the codebase.
git-svn-id: https://groovy-monkey.svn.sourceforge.net/svnroot/groovy-monkey/trunk@306 b4b37a63-7f15-0410-b854-ca377d9cf445